k8s/高可用部署/eazybuilder-web.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: eazybuilderweb
  name: eazybuilderweb
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: eazybuilderweb
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: eazybuilderweb
    spec:
      containers:
      - env:
        - name: TZ
          value: Asia/Shanghai
        image: jinqiu8810/eazybuilder-web
        imagePullPolicy: Always
        name: eazybuilderweb
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          failureThreshold: 10
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 10
          tcpSocket:
            port: 80
          timeoutSeconds: 10
        volumeMounts:
        - mountPath: /usr/share/nginx/html/eazybuilder-web/resources/
          name: eazybuilder-pvc            
        resources:
          limits:
            cpu: 1m
            memory: 1Gi
          requests:
            cpu: 1m
            memory: 10Mi
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: harbor
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: eazybuilder-pvc
        persistentVolumeClaim:
          claimName: eazybuilder-pvc      
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eazybuilderweb
  name: eazybuilderweb
spec:
  clusterIP: None
  ports:
  - name: server
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: eazybuilderweb
  sessionAffinity: None
  type: ClusterIP
---
