k8s/高可用部署/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  ports:
  - port: 3306
    name: client
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - args:
        - --default-time-zone=+8:00
        image: mysql:8.0.21
        imagePullPolicy: Always
        name: mysql
        ports:
        - containerPort: 3306
          name: client
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-sigle-storage
      imagePullSecrets:
      - name: harbor
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: mysql-sigle-storage
        persistentVolumeClaim:
          claimName: mysql-sigle-storage-pvc
---
