k8s/高可用部署/sonarqube.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: sonarqube
  name: sonarqube
    
spec:
  replicas: 1
  serviceName: sonarqube-headless
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:   
      containers:
      - image: jinqiu8810/eazybuilder-sonarqube
        imagePullPolicy: Always
        name:  sonarqube
        # 容器启动命令，【可选】
        # command:
        # 定义端口信息
        ports:
          - # name: port1
            # protocol: TCP
            containerPort: 9000
        # 定义环境变量
        volumeMounts:
          - name: config-volume
            mountPath: /opt/sonarqube/conf  
      volumes:
      - name: config-volume
        configMap:
          items:
          - key: sonar.properties
            path: sonar.properties
          - key: wrapper.conf
            path: wrapper.conf            
          name: sonar-cm                 
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarqube-headless
  name: sonarqube-headless
    
spec:
  clusterIP: None
  ports:
  - port: 9000
    name: server
    targetPort: 9000
  selector:
    app: sonarqube
    
---
# ------------------- App Ingress ------------------- #
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube
  

spec:
  rules:
  - host: sonarqube.eazybuilder.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarqube-headless
            port: 
             name: server
